--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,12 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "kutia-software-company/larafirebase": "^1.3",
         "laravel/framework": "^8.0",
         "laravel/passport": "^10.4",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "league/flysystem-aws-s3-v3": "1.0.29",
+        "pbmedia/laravel-ffmpeg": "^7.8"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
